# ai-programing-exercise

./: .env.example  .env.production.example  .gitignore  .lighthouserc.json  404.html  BYTEROVER.md  CLAUDE.local.md  CLAUDE.md  Dockerfile  GEMINI.md  MICROSERVICES_README.md  README.md  RELEASE_NOTES.md  TODO.md  docker-compose.load-test.yml  docker-compose.microservices.yml  docker-compose.yml  gulpfile.js  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  replay.md  seed-data.ps1  vercel.json
app/: .bikeshed.edn  .c8rc.json  .clang-format  .clang-tidy  .cljfmt.edn  .dependency-cruiser.js  .dockerignore  .eastwood  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .globalconfig  .golangci.yml  .php-cs-fixer.php  .phpunit.result.cache  .rubocop_todo.yml  .ruff.toml  App.sln  BubbleSort.fsx  BubbleSort.hs  CHANGELOG.md  CMakeLists.txt  CPU4bit.fsx  CPU4bitPure.fsx  Cargo.toml  DEPLOYMENT.md  Deadlock.hs  DeadlockDemo.fsx  FizzBuzzCSharp.sln  FourBitCPU.hs  Gemfile  Guardfile  LRUCache.fsx  LRUCache.hs  LotAcceptanceProbability.fsx  LotProbability.hs  (+94 more)
app/.clj-kondo/: config.edn
app/.githooks/: pre-commit
app/FizzBuzz/: Class1.cs  FizzBuzz.csproj  FizzBuzzApplication.cs  FizzBuzzCommand.cs  FizzBuzzType.cs  FizzBuzzValue.cs  Number.cs  Program.cs
app/FizzBuzzTest/: FizzBuzzTest.csproj  UnitTest1.cs
app/algorithm-clj/: .gitignore  CHANGELOG.md  Makefile  README.md  TOOLCHAIN_SETUP_REPORT.md  project.clj
app/algorithm-haskell/: .hlint.yaml  CHANGELOG.md  Makefile  README.md  algorithm-haskell.cabal  complexity-analyzer.hs  complexity-report.hs  package.yaml
app/app/: Main.hs
app/application/: fizz_buzz_command.go  fizz_buzz_list_command.go  fizz_buzz_value_command.go
app/backend/: .editorconfig  .globalconfig  Dockerfile  MRS.sln  README.md  appsettings.Monitoring.json  appsettings.Security.json  hash_generator.cs  package.json  test-auth.sh  vitest.config.ts
app/build_coverage/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fizzbuzz  fizzbuzz_test
app/chapter3/: README.md  TODO.md  main.py  pyproject.toml  tox.ini
app/chapter4/: README.md  TODO.md  main.py  pyproject.toml  tox.ini
app/chapter5/: README.md  TODO.md  main.py  pyproject.toml
app/chapter6/: AI_INTEGRATION_COMPLETE.md  AI_INTEGRATION_README.md  ML_README.md  README.md  TODO.md  USAGE_GUIDE.md  main.py  main_with_ai.py  main_with_ai_simple.py  pyproject.toml  quick_training_test.py  test_ai_integration.py  test_ml_integration.py  test_player_assist_ai.py  test_simple_ai.py  test_smart_enemy.py  train_dqn_agent.py  train_ppo_agent.py
app/chapter7/: README.md  TODO.md  main.py  pyproject.toml  tox.ini
app/claude/: index.html  style.css
app/csharp/: .editorconfig  .env.example  .gitignore  .globalconfig  AccountingSystem.sln  Directory.Build.props  ProductionManagement.sln  README.md  build.cake  docker-compose.yml
app/csharp-ms/: AccountingSystem.sln  README.md  docker-compose.yml
app/docs/: ARRAY_TESTS.md
app/fizz-buzz/: CHANGELOG.md  README.md  project.clj
app/fizz-buzz-clj/: .gitignore  CHANGELOG.md  Makefile  README.md  deps.edn  project.clj
app/fizz_buzz/: .formatter.exs  DEVELOPMENT.md  README.md  mix.exs
app/fizzbuzz/: .editorconfig  CHANGELOG.md  Cargo.toml  Directory.Packages.props  FizzBuzz.sln  LICENSE.md  Makefile  Program.fs  README.md  build.cake  build.ps1  build.sh  elvis.config  fizzbuzz.cabal  fizzbuzz.fsproj  fsharplint.json  project.clj  rebar.config  stack.yaml  test_error.hs  watch.sh
app/fizzbuzz-scala/: .scalafmt.conf  build.sbt  functional_demo.scala
app/frontend/: .env.development  .env.example  .prettierignore  .prettierrc.json  Dockerfile  README.md  cypress.config.ts  eslint.config.js  index.html  jest.config.js  jest.setup.js  next.config.js  nginx.conf  orval.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
app/fsharp/: .env.example  .gitignore  AccountingSystem.sln  README.md  build.cake  docker-compose.yml  fsharplint.json
app/fsharp-ms/: .dockerignore  .gitignore  FinancialAccountingService.sln  README.md  docker-compose.yml
app/gemini/: app.js  index.html  style.css
app/go-tdd-tutorial/: .gitignore  .golangci.yml  Makefile  README.md  calculator.go  calculator_test.go  go.mod  main.go
app/haskell-tdd/: .gitignore  .hlint.yaml  ChangeLog.md  Makefile  README.md  package.yaml  stack.yaml
app/java/: .gitignore  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle
app/java-ms/: .gitignore  README.md  build.gradle  docker-compose.yml  gradle.properties  settings.gradle
app/java-tdd-fizzbuzz/: pom.xml
app/java-tdd-fizzbuzz-gradle/: .gitignore  README.md  build.gradle
app/kotlin-fizzbuzz/: HelloTest.kt  build.gradle.kts  settings.gradle.kts
app/lib/: __init__.py  fizz_buzz.py  fizz_buzz.rb  fizz_buzz_new.py
app/monitoring/: alert-rules.yml  alertmanager.yml  grafana-dashboard-mrs.json  prometheus.yml
app/prisma/: schema.prisma
app/prolog-oo-fizzbuzz/: .gitignore  Makefile  README.md
app/public/: index.html  manifest.webmanifest
app/python-tdd/: .coverage  .flake8  .pylintrc  Makefile  README.md  final_test.py  main.py  manual_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  simple_test.py
app/scala/: .env.example  .gitignore  README.md  build.sbt  docker-compose.yml  justfile
app/scala-ms/: .gitignore  README.md  build.sbt  docker-compose.yml  justfile
app/script-lab/: README.md  book-registration-client.yaml
app/scripts/: watch.sh
app/shared/: package.json
app/src/: App.tsx  Assertions.php  Config.ts  FizzBuzz.hs  FizzBuzz.php  FizzBuzz.test.ts  FizzBuzz.ts  FizzBuzzCommand.php  FizzBuzzCommand.ts  FizzBuzzExceptions.php  FizzBuzzList.php  FizzBuzzList.ts  FizzBuzzListCommand.php  FizzBuzzType.php  FizzBuzzType.ts  FizzBuzzType1.php  FizzBuzzType2.php  FizzBuzzType3.php  FizzBuzzValue.php  FizzBuzzValueCommand.php  Game.ts  Player.ts  Program.ts  Puyo.ts  Stage.ts  animation.test.ts  animation.ts  (+50 more)
(+5517 files in other folders)
