[package]
name = "sales-management-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
# データベース接続とクエリ実行
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
# 非同期ランタイム
tokio = { version = "1", features = ["full"] }
# 日付と時刻
chrono = { version = "0.4", features = ["serde"] }
# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }
# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"
# 環境変数
dotenv = "0.15"
# シリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# テストコンテナ（test-supportフィーチャー有効時のみ）
testcontainers = { version = "0.15", optional = true }
testcontainers-modules = { version = "0.3", features = ["postgres"], optional = true }

[dev-dependencies]
# テストコンテナ（開発時は常に有効）
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }

[features]
# 統合テスト用のテストサポート機能
test-support = ["dep:testcontainers", "dep:testcontainers-modules"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
